--- a/src/pages/Admin/index.scss
+++ b/src/pages/Admin/index.scss
@@ -74,6 +74,9 @@
       .select_title {
         margin-bottom: 0px;
       }
+      .select{
+        margin:0;
+      }
     }
 
     .filter_dropDown .filter_title {
