--- a/src/components/Select/index.scss
+++ b/src/components/Select/index.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/main.scss';
 
 .select {
-  margin: 20px 0;
+  padding: 10px 0;
   width: 100%;
   .select_title {
     font-size: 7px;
@@ -31,18 +31,25 @@
   }
 
   .select_input {
-    width: 100%;
-    height: 40px;
+    max-width: 100%;
+    min-height: 40px;
     border-radius: 5px;
     border: 1px solid #e4e4e4;
+    background-color: $white;
+    box-sizing: border-box;
     position: relative;
+    padding: 4px 11px;
+    margin: 0;
     cursor: pointer;
     color: black;
+    text-align: left;
+    line-height: 40px;
   }
 
   .select_value {
-    padding: 10px 10px;
+    // padding: 10px 10px;
     display: block;
+    font-size: 14px;
   }
 
   .select＿icon {
