--- a/src/pages/Settings/index.scss
+++ b/src/pages/Settings/index.scss
@@ -34,6 +34,9 @@
         // .textinput{
         //   float: right;
         // }
+        .right_sec_address{
+          display: flex;
+        }
       }
     }
 
