--- a/src/pages/Portfolio/index.scss
+++ b/src/pages/Portfolio/index.scss
@@ -34,8 +34,8 @@ hr {
   flex-direction: row;
 
   .tag {
-    background: $blue;
-    color: #ffffff;
+    background: $light-blue;
+    color: $blue;
     border-radius: 5px;
     padding: 5px 12px;
     font-size: 14px;
