update theme color

--- a/src/pages/Settings/index.scss
+++ b/src/pages/Settings/index.scss
@@ -140,8 +140,8 @@
           color: #ffffff;
         }
 
-        &.white {
-          background-color: #ffffff;
+        &.light {
+          background-color: $background-color;
           color: #000000;
         }
 
