--- a/src/components/ResumeBtn/index.scss
+++ b/src/components/ResumeBtn/index.scss
@@ -1,22 +1,31 @@
 @import '../../../styles/main.scss';
 
 .resumeBtn {
-    width:10%;
-    position: relative;
-    margin-right: 10px;
-    .resumeBtn_btn {
-        width:100%;
-        background-color: transparent;  
-    }
+  position: relative;
+  display: flex;
+  button {
+    width: 100%;
+    background-color: transparent;
+  }
+}
 
-    .resumeBtn_dropDown {
-        position: absolute;
-        right: 0px;
-        width: 100px;
-        background-color: $white;
-        border-radius: 10px;
-        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-        padding: 10px;
-        z-index: 99;
+.resumeBtn_dropDown {
+  position: absolute;
+  top: 50px;
+  right: 0px;
+  width: 100px;
+  background-color: $white;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  padding: 10px;
+  z-index: 99;
+
+  span {
+    display: block;
+    line-height: 2;
+    cursor: pointer;
+    &:hover {
+      color: #3597ec;
     }
+  }
 }
