--- a/src/components/EditProjectList/index.scss
+++ b/src/components/EditProjectList/index.scss
@@ -5,10 +5,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  width: 80%;
 
-  h3 {
+  .edit_project_title h3{
     color:#000000;
-    font-size: 22px;
+    font-size: 18px;
+    font-weight:normal;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -18,6 +20,7 @@
     position: absolute;
     right: 10px;
     top: 10px;
+    cursor: pointer;
   }
 
   .edit_project_description {
