fix style and errors in Login & Register pages

--- a/src/pages/Register/index.scss
+++ b/src/pages/Register/index.scss
@@ -1,5 +1,6 @@
 @import "../../../styles/main.scss";
 .Register {
+  overflow: hidden;
   .AppContent {
     display: flex;
     flex-direction: row;
