修改TextInput、串接新增專案api

--- a/src/pages/Portfolio/index.scss
+++ b/src/pages/Portfolio/index.scss
@@ -50,6 +50,10 @@ hr {
 .portfolio_desc {
   color: $dark-gray;
   margin: 50px auto 20px;
+
+  textarea {
+    max-width: unset !important;
+  }
 }
 
 .portfolio_techstack {
