--- a/src/components/UserInfo/index.scss
+++ b/src/components/UserInfo/index.scss
@@ -4,6 +4,16 @@
 
   .user_img {
     margin-right: 30px;
+    width: 150px;
+    height: 150px;
+    outline: 0;
+    margin-bottom: 5px;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+    border: 1px solid lightgray;
   }
 
   .user_url {
