--- a/src/components/UserList/index.scss
+++ b/src/components/UserList/index.scss
@@ -25,6 +25,9 @@
   margin-right: 10px;
   width: 10%;
   margin: 30px auto;
+  .edit_user_btn{
+    max-width:100%;
+  }
 }
 
 .user_msg .textarea {
