--- a/src/components/ResumeBtn/index.scss
+++ b/src/components/ResumeBtn/index.scss
@@ -2,10 +2,16 @@
 
 .resumeBtn {
   position: relative;
-  display: flex;
   button {
     width: 100%;
     background-color: transparent;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    svg {
+      margin-left: 5px;
+    }
   }
 }
 
