--- a/src/components/CodeEditors/index.scss
+++ b/src/components/CodeEditors/index.scss
@@ -7,11 +7,15 @@
     overflow-y: scroll;
     overflow-x: hidden;
   }
+  .formatBtn {
+    border: none;
+  }
   .saveBtn {
     width: auto;
     font-size: 12px;
     padding: 0 10px;
     box-sizing: border-box;
+    border: none;
     svg {
       margin-right: 5px;
     }
