avatar upload in Settings page

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -40,7 +40,7 @@
       background-size: cover;
       background-position: center;
       border-radius: 15px;
-      border: 1px solid lightgray;
+      // border: 1px solid lightgray;
     }
 
     .user_name {
