--- a/src/pages/Resume/index.scss
+++ b/src/pages/Resume/index.scss
@@ -122,4 +122,16 @@
   .main_section{
     padding-bottom: 0px;
   }
+  .avatar_dropzone{
+    width: 150px;
+    height: 150px;
+    outline: 0;
+    margin-bottom: 5px;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+    border: 1px solid lightgray;
+  }
 }
