--- a/src/components/UserList/index.scss
+++ b/src/components/UserList/index.scss
@@ -6,6 +6,8 @@
   align-items: center;
   .user_img{
     margin-right: 10px;
+    width: 150px;
+    height: 150px;
   }
   .user_name {
     flex-direction: column;
